Fixed issue with buttons overlapping in the footer

--- a/assets/modals/network_settings/css/style.css
+++ b/assets/modals/network_settings/css/style.css
@@ -1,31 +1,31 @@
 #dhcp_div {
-  float: right;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .inline {
-  display: inline;
-  position: relative;
+    display: inline;
+    position: relative;
 }
 
 #dhcp_module {
-  height: 50px;
+    height: 50px;
 }
 
-#network_selectors table{
-  border-spacing: 0;
+#network_selectors table {
+    border-spacing: 0;
 }
 
-#network_selectors td, #network_selectors tr,  #network_selectors th{
-  padding: 0 !important;
-  box-sizing: border-box !important;
-  margin: 0 !important;
+#network_selectors td, #network_selectors tr, #network_selectors th {
+    padding: 0 !important;
+    box-sizing: border-box !important;
+    margin: 0 !important;
 }
 
 hr {
-  margin-bottom: 10px;
-  margin-top: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
-
 
 .wifiID {
     text-align: center;
@@ -49,5 +49,5 @@ hr {
 }
 
 #wifi_details div {
-  margin: 15px;
+    margin: 15px;
 }
