--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -9,7 +9,8 @@
 }
 
 .pull-right {
-  float: right;
+  @extend .right;
+
 }
 
 .right {
@@ -120,7 +121,7 @@ hr {
     left: 5px;
   }
 
-  &.badge-bigger{
+  &.badge-bigger {
     width: 50px;
     height: 50px;
     font-size: 15px;
